[gd_scene load_steps=5 format=3 uid="uid://bog2007up0peb"]

[ext_resource type="Script" uid="uid://dyxipl8b180kd" path="res://scenes/ui/mobile_controller.gd" id="1_5ki2t"]
[ext_resource type="Texture2D" uid="uid://dkg2h7dr0y81v" path="res://assets/arrow.png" id="1_bi6je"]
[ext_resource type="Texture2D" uid="uid://bvfonwic2f1qc" path="res://assets/arrow_left.png" id="1_dkdi1"]
[ext_resource type="Texture2D" uid="uid://dn2vvixr5618q" path="res://assets/jump_button.png" id="2_5ki2t"]

[node name="MobileController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5ki2t")

[node name="Controller" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -201.0
offset_right = 600.0
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Controller"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Controller/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Left" type="TouchScreenButton" parent="Controller/HBoxContainer/MarginContainer"]
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("1_dkdi1")
texture_pressed = ExtResource("1_dkdi1")

[node name="MarginContainer3" type="MarginContainer" parent="Controller/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 200

[node name="Right" type="TouchScreenButton" parent="Controller/HBoxContainer/MarginContainer3"]
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("1_bi6je")
texture_pressed = ExtResource("1_bi6je")

[node name="MarginContainer2" type="MarginContainer" parent="Controller/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="Jump" type="TouchScreenButton" parent="Controller/HBoxContainer/MarginContainer2"]
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_5ki2t")
texture_pressed = ExtResource("2_5ki2t")

[connection signal="pressed" from="Controller/HBoxContainer/MarginContainer/Left" to="." method="_on_left_pressed"]
[connection signal="released" from="Controller/HBoxContainer/MarginContainer/Left" to="." method="_on_left_released"]
[connection signal="pressed" from="Controller/HBoxContainer/MarginContainer3/Right" to="." method="_on_right_pressed"]
[connection signal="released" from="Controller/HBoxContainer/MarginContainer3/Right" to="." method="_on_right_released"]
[connection signal="pressed" from="Controller/HBoxContainer/MarginContainer2/Jump" to="." method="_on_jump_pressed"]
[connection signal="released" from="Controller/HBoxContainer/MarginContainer2/Jump" to="." method="_on_jump_released"]
